--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,7 @@ percent-encoding = "2.1.0"
 postcard = { version = "1", features = ["alloc"] }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde_json = "1"
+regex = { version = "1.11", default-features = false }
 
 # HTTP
 hyper = "1"
@@ -172,6 +173,7 @@ trait-variant = "0.1"
 aes = "0.8"
 fpe = { version = "0.6", default-features = false, features = ["alloc"] }
 zip32 = { version = "0.2", default-features = false }
+bip0039 = { version = "0.12" }
 
 # Workaround for https://anonticket.torproject.org/user/projects/arti/issues/pending/4028/
 time-core = "=0.1.2"
