zcash_client_backend: Add support for imported transparent pubkeys.
This change makes it possible to import standalone transparent addresses
into the wallet and associate them with a specific account. In order to
construct a transaction that spends from such an address, the signer
needs to explicitly provide a spending key capable of producing the
required signatures.

--- a/zcash_client_backend/Cargo.toml
+++ b/zcash_client_backend/Cargo.toml
@@ -73,6 +73,9 @@ group.workspace = true
 orchard = { workspace = true, optional = true }
 sapling.workspace = true
 
+# - Transparent protocol
+secp256k1 = { workspace = true, optional = true }
+
 # - Sync engine
 async-trait = { version = "0.1", optional = true }
 futures-util = { version = "0.3", optional = true }
@@ -168,6 +171,7 @@ lightwalletd-tonic-transport = ["lightwalletd-tonic", "tonic?/transport"]
 ## Enables receiving transparent funds and shielding them.
 transparent-inputs = [
     "dep:bip32",
+    "dep:secp256k1",
     "transparent/transparent-inputs",
     "zcash_keys/transparent-inputs",
     "zcash_primitives/transparent-inputs",
